@@ -1,3 +1,7 @@
+2002-03-18 Lieven Vanholme  <Lieven.Vanholme@rug.ac.be>
+
+        * slabmode.cpp: Reset scaling after core region.
+
 2002-03-18 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
         * slabmode.cpp: Improve portability.
